--- a/Signature_Recognition_and_Verification.ipynb
+++ b/Signature_Recognition_and_Verification.ipynb
@@ -1795,6 +1795,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
+        "state":{}
         "12feeb2544d143be8289c86010f5949f": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "VBoxModel",
